# rip

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/cli/: mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/agent/: mod.rs  traits.rs
crates/lib/src/bcode/: mod.rs  tests.rs
crates/lib/src/bcode/decode/: mod.rs  parser.rs
crates/lib/src/bcode/encode/: mod.rs  parser.rs
crates/lib/src/bcode/types/: mod.rs
crates/lib/src/bencode/: mod.rs  parser.rs  tests.rs  types.rs
crates/lib/src/error/: mod.rs
crates/lib/src/helpers/: mod.rs
crates/lib/src/peer/: handshake.rs  message.rs  mod.rs
crates/lib/src/torrent/: info.rs  mod.rs  parse.rs
crates/lib/src/torrent/download/: mod.rs
crates/lib/src/torrent/info/: mod.rs
crates/lib/src/torrent/parse/: mod.rs
crates/lib/src/torrent/tracker/: mod.rs  request.rs  response.rs
crates/lib/src/tracker/: mod.rs  request.rs  response.rs
crates/lib/tests/: test_bit_operations.rs  test_parse_torrent.rs  test_peer_message.rs  test_torrent_download.rs  test_torrent_parse.rs  test_torrent_tracker.rs
